--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,88 +5,23 @@ homeassistant:
   elevation: 430
   unit_system: imperial
   time_zone: America/Los_Angeles
-  customize:
-    sensor.dark_sky_summary:
-      friendly_name: Summary
-    sensor.dark_sky_precip_type:
-      friendly_name: Precip. Type
-    sensor.dark_sky_precip_intensity:
-      friendly_name: Precip. Intensity
-    sensor.dark_sky_precip_probability:
-      friendly_name: Chance of Precip.
-    sensor.dark_sky_temperature:
-      friendly_name: Temperature
-    sensor.dark_sky_apparent_temperature:
-      friendly_name: Feels Like
-    sensor.dark_sky_wind_speed:
-      friendly_name: Wind Speed
-    sensor.dark_sky_cloud_cover:
-      friendly_name: Cloud Cover
-    sensor.dark_sky_humidity:
-      friendly_name: Humidity
-    sensor.dark_sky_visibility:
-      friendly_name: Visibility
-    sensor.dark_sky_daily_high_temperature:
-      friendly_name: Max. Temp.
-    sensor.dark_sky_daily_low_temperature:
-      friendly_name: Min. Temp.
-    sensor.fastcom_download:
-      friendly_name: Connection Speed
-      icon: mdi:cloud-check
-    sensor.nzbget_queue_size:
-      friendly_name: Download Queue
-      icon: mdi:folder-download
-    sensor.nzbget_download_paused:
-      friendly_name: Downloads Paused
-      icon: mdi:pause-octagon
-    sensor.nzbget_disk_free:
-      friendly_name: Free Disk Space
-      icon: mdi:harddisk
-    sensor.nzbget_speed:
-      friendly_name: Current Download Speed
-      icon: mdi:folder-move
-    device_tracker.androidaa0fbb6da5bf675clan:
-      friendly_name: Derek
-      icon: mdi:human-male
+  customize: !include configuration.d/customize.yaml
 
-automation:
-#  - alias: 'Dusk on'
-#    trigger:
-#      platform: sun
-#      event: sunset
-#      offset: "-00:25:00"
-#    action:
-#      service: switch.turn_on
-#      entity_id: switch.the_sparkle 
-#  - alias: 'auto off at bedtime'
-#    trigger:
-#      platform: time
-#      after: "21:35:00"
-#    action:
-#      service: switch.turn_off
-#      entity_id: switch.the_sparkle 
-  - alias: 'bedroom trickery on'
-    trigger:
-      platform: time
-      after: "21:45:00"
-    action:
-      service: switch.turn_on
-      entity_id: switch.bedroom_lamp
-#  - alias: 'bedroom trickery off'
-#    trigger:
-#      platform: time
-#      after: "22:00:00"
-#    action:
-#      service: switch.turn_off
-#      entity_id: switch.bedroom_lamp
-
-# Enables the frontend
-frontend:
-
+# password and certs
 http:
   api_password: !secret hass_password
   ssl_certificate: !secret ssl_cert
   ssl_key: !secret ssl_key
+
+# making my house a robot
+automation: !include configuration.d/automation.yaml
+
+zwave:
+  usb_path: /dev/ttyACM0
+  config_path: /srv/homeassistant/homeassistant_venv/lib/python3.4/site-packages/libopenzwave-0.3.1-py3.4-linux-armv7l.egg/config/
+
+# Enables the frontend
+frontend:
 
 # Checks for available updates
 updater:
@@ -109,235 +44,20 @@ sun:
 device_tracker:
   - platform: locative
 
-#zwave:
-#  usb_path: /dev/ttyACM0
-#  config_path: /usr/local/lib/python3.4/dist-packages/libopenzwave-0.3.1-py3.4-linux-armv7l.egg/config
+# Sensors
+sensor: !include configuration.d/sensors.yaml
 
-# Weather Prediction
-sensor:
-  platform: darksky
-  api_key: !secret forcastio_api
-  monitored_conditions:
-    - summary
-    - icon
-    - precip_type
-    - precip_intensity
-    - precip_probability
-    - temperature
-    - apparent_temperature
-    - wind_speed
-    - cloud_cover
-    - humidity
-    - visibility
-    - temperature_max
-    - temperature_min
+# Switches
+switch: !include configuration.d/switch.yaml
 
-# Internet
-sensor 2:
-  platform: fastdotcom
-  minute:
-    - 0
-    - 30
+# Security
+camera: !include configuration.d/camera.yaml
 
-# Travel Times
-sensor 3:
-  platform: google_travel_time
-  name: Home to IDX
-  origin: zone.home
-  destination: zone.idx
-  api_key: !secret google_api
-sensor 4:
-  platform: google_travel_time
-  name: Home to Bend
-  origin: zone.home
-  destination: zone.bend
-  api_key: !secret google_api
-sensor 5:
-  platform: google_travel_time
-  name: Home to Florence
-  origin: zone.home
-  destination: zone.florence
-  api_key: !secret google_api
-sensor 6:
-  platform: google_travel_time
-  name: Home to Portland
-  origin: zone.home
-  destination: zone.portland
-  api_key: !secret google_api
+# Media
+media_player: !include configuration.d/media_player.yaml
 
-# NZB Get
-sensor 7:
-  platform: nzbget
-  host: 192.168.131.2
-  port: 6789
-# username: apiuser
-# password: apipass
-  monitored_variables:
-    - average_download_rate
-    - download_rate
-    - download_paused
-    - free_disk_space
-    - remaining_size
-    - uptime
-
-# Synology NAS
-sensor 8:
-  platform: synologydsm
-  host: 192.168.131.2
-  port: 5000
-  username: !secret nas_user
-  password: !secret nas_passwd
-  monitored_conditions:
-    - cpu_total_load
-    - network_up
-    - network_down
-    - disk_smart_status
-    - disk_status
-    - disk_temp
-    - volume_status
-    - volume_size_total
-    - volume_percentage_used
-    - volume_disk_temp_avg
+# Groups (setting up display)
+group: !include configuration.d/views.yaml
 
 # Zones
-zone 1:
-  name: Home
-  latitude: !secret me_lat
-  longitude: !secret me_long
-  radius: 40
-  icon: mdi:home
-zone 2:
-  name: IDX
-  latitude: 44.0497156
-  longitude: -123.0910567
-  radius: 40
-  icon: mdi:briefcase
-zone 3:
-  name: Bend
-  latitude: 44.0582
-  longitude: -121.3153
-  radius: 40
-  icon: mdi:car
-zone 4:
-  name: Florence
-  latitude: 43.9826
-  longitude: -124.0998
-  radius: 40
-  icon: mdi:anchor
-zone 5:
-  name: Portland
-  latitude: 45.5231
-  longitude: -122.6765
-  radius: 40
-  icon: mdi:emoticon-poop
-
-#camera:
-#  platform: generic
-#  still_image_url: http://192.168.131.98/ccm/ccm_pic_get.jpg?hfrom_handle=887330&dsess=1&dsess_nid=MCSPzrLvnhitA.2FvjTZyvJCE19hGw&dsess_sn=1jfiegbpz61xq&dtoken=p0_xxxxxxxxxx
-#  name: Garage Cam
-
-switch:
-  platform: tplink
-  host: 192.168.131.97
-  name: Bedroom Lamp
-
-switch 2:
-  platform: tplink
-  host: 192.168.131.96
-  name: The Sparkle
-
-media_player:
-  - platform: kodi
-    host: http://192.168.131.3
-    port: 9090
- 
-# Groups (setting up display)
-group:
-  # views - that are groups I guess
-  default_view:
-    view: yes
-    entities:
-#      - camera.garage_cam
-      - group.weather
-      - group.travel_times
-      - group.outlets
-      - group.family_status
-  bedroom_view:
-    view: yes
-    name: Bedroom
-    entities:
-      - group.bedroom_lamps
-  livingroom_view:
-    view: yes
-    name: Living Room
-    entities:
-      - media_player.kodi
-      - group.misc
-  network_view:
-    view: yes
-    name: Network
-    entities:
-      - group.internet
-      - group.nas
-  # groups - actual groups
-  weather:
-    name: Weather
-    entities:
-      - sensor.dark_sky_summary
-      - sensor.dark_sky_precip_type
-      - sensor.dark_sky_precip_intensity
-      - sensor.dark_sky_precip_probability
-      - sensor.dark_sky_temperature
-      - sensor.dark_sky_apparent_temperature
-      - sensor.dark_sky_wind_speed
-      - sensor.dark_sky_cloud_cover
-      - sensor.dark_sky_humidity
-      - sensor.dark_sky_visibility
-      - sensor.dark_sky_daily_high_temperature
-      - sensor.dark_sky_daily_low_temperature
-      - sun.sun
-  bedroom:
-    name: Bedroom
-    entities:
-      - switch.bedroom_lamp
-  bedroom_lamps:
-    name: Lamps
-    entities:
-      - switch.bedroom_lamp
-  misc:
-    name: Misc
-    entities:
-      - switch.the_sparkle
-  outlets:
-    name: Outlets
-    entities:
-      - switch.bedroom_lamp
-      - switch.the_sparkle
-  internet:
-    name: Internet
-    entities:
-      - sensor.fastcom_download
-      - sensor.nzbget_queue_size
-      - sensor.nzbget_download_paused
-      - sensor.nzbget_disk_free
-      - sensor.nzbget_speed
-  nas:
-    name: NAS
-    entities:
-      - sensor.average_disk_temp_volume_1
-      - sensor.cpu_load_total
-      - sensor.network_down
-      - sensor.network_up
-      - sensor.status_volume_1
-      - sensor.volume_used_volume_1
-  travel_times:
-    name: Travel Times
-    entities:
-      - sensor.home_to_idx
-      - sensor.home_to_bend
-      - sensor.home_to_florence
-      - sensor.home_to_portland
-  family_status:
-    name: Family Status
-    entities:
-      - device_tracker.androidaa0fbb6da5bf675clan
+zone: !include configuration.d/zone.yaml
