--- a/configuration.d/views.yaml
+++ b/configuration.d/views.yaml
@@ -4,7 +4,7 @@
   default_view:
     view: yes
     entities:
-#      - camera.garage_cam
+      - camera.garage_cam
       - group.weather
       - group.travel_times
       - group.outlets
