--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,6 +12,13 @@ http:
   api_password: !secret hass_password
   ssl_certificate: !secret ssl_cert
   ssl_key: !secret ssl_key
+  trusted_networks:
+    - 127.0.0.1
+    - ::1
+    - 192.168.0.0/24
+    - 2001:DB8:ABCD::/48
+  ip_ban_enabled: True
+  login_attempts_threshold: 5
 
 # making my house a robot
 automation: !include configuration.d/automation.yaml
