--- a/configuration.d/customize.yaml
+++ b/configuration.d/customize.yaml
@@ -42,7 +42,7 @@
       icon: mdi:folder-move
 
 # location
-    device_tracker.androidaa0fbb6da5bf675clan:
+    device_tracker.ht6a60207972:
       friendly_name: Derek
       icon: mdi:human-male
 
