--- a/configuration.d/camera.yaml
+++ b/configuration.d/camera.yaml
@@ -1,3 +1,6 @@
-  - platform: generic
-    still_image_url: http://192.168.131.98/ccm/ccm_pic_get.jpg?hfrom_handle=887330&dsess=1&dsess_nid=MCBrlRlKNM4RjVisvI709HRCJe9hAg&dsess_sn=1jfiegbpz61xq&dtoken=p0_xxxxxxxxxx
-    name: Garage Cam
+#  - platform: generic
+#    still_image_url: http://192.168.131.98/ccm/ccm_pic_get.jpg?hfrom_handle=887330&dsess=1&dsess_nid=MAymyWgyKSz1fjngmGn9DU9CHcFhAQ&dsess_sn=1jfiegbpz61xq&dtoken=p0_xxxxxxxxxx
+#    name: Garage Cam
+#  - platform: generic
+#    still_image_url: http://kval.com/resources/ftptransfer/kval/maps/kvaltower.jpg
+#    name: Weather Cam
