--- a/configuration.d/sensors.yaml
+++ b/configuration.d/sensors.yaml
@@ -22,6 +22,11 @@
       - 0
       - 30
 
+#ups
+  - platform: ups
+    username: !secret ups_user
+    password: !secret ups_passwd
+
 # Travel Times
   - platform: google_travel_time
     name: Home to IDX
