--- a/configuration.d/views.yaml
+++ b/configuration.d/views.yaml
@@ -4,33 +4,39 @@
   default_view:
     view: yes
     entities:
-      - camera.garage_cam
-      - group.weather
+      #- camera.garage_cam
+      #- camera.weather_cam
+      - group.netatmo_i
+      - group.netatmo_o
       - group.travel_times
       - group.outlets
       - group.family_status
-      - configurator.ecobee
+      - climate.cottage
+      - group.interior_env
   bedroom_view:
     view: yes
     name: Bedroom
     entities:
       - group.bedroom_lamps
+      - switch.bedroom_air
   livingroom_view:
     view: yes
     name: Living Room
     entities:
       - media_player.kodi
       - group.misc
+      - sensor.living_room_temperature
   network_view:
     view: yes
     name: Network
     entities:
       - group.internet
       - group.nas
+      - group.weather
 
 # groups (cards) within the tabs
   weather:
-    name: Weather
+    name: Internet Weather
     entities:
       - sensor.dark_sky_summary
       - sensor.dark_sky_precip_type
@@ -45,6 +51,25 @@
       - sensor.dark_sky_daily_high_temperature
       - sensor.dark_sky_daily_low_temperature
       - sun.sun
+  netatmo_i:
+    name: Netatmo Indoor
+    entities:
+      - sensor.netatmo_indoor_temperature
+      - sensor.netatmo_indoor_humidity
+      - sensor.netatmo_indoor_pressure
+      - sensor.netatmo_indoor_noise
+      - sensor.netatmo_indoor_co2
+  netatmo_o:
+    name: Netatmo Outdoor
+    entities:
+      - sensor.netatmo_outdoor_temperature
+      - sensor.netatmo_outdoor_humidity
+  interior_env:
+    name: Inside Temps
+    entities:
+      - sensor.cottage_temperature
+      - sensor.cottage_humidity
+      - sensor.living_room_temperature
   bedroom:
     name: Bedroom
     entities:
@@ -86,8 +111,8 @@
       - sensor.home_to_bend
       - sensor.home_to_florence
       - sensor.home_to_portland
-  family_status:
-    name: Family Status
-    entities:
-      - device_tracker.ht6a60207972
+#  family_status:
+#    name: Family Status
+#    entities:
+#      - device_tracker.ht6a60207972
 
